--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body{
   
 }
 header{
-  background-color: chartreuse;
+  background-color: rgb(224, 233, 216);
   text-align: center;
   padding-top: 10px;
   padding-bottom: 10px;
@@ -21,7 +21,7 @@ margin-left: 600px;
 
 
 footer{
-  background-color: chartreuse;
+  background-color: rgb(224, 233, 216);
   text-align: center;
   padding-top: 20px;
   padding-bottom: 30px;
